objects/Business_Risk_Escalation_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Business_Risk_Escalation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Risk Escalation</label>
        <referenceTo>BusinessRiskEscalations__c</referenceTo>
        <relationshipLabel>Business Risk Escalation Alerts</relationshipLabel>
        <relationshipName>Business_Risk_Escalation_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reminder No Update</fullName>
                </value>
                <value>
                    <fullName>Reminder Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <label>Business Risk Escalation Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Risk_Escalation__c</columns>
        <columns>User_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BREAlert-{0000000000}</displayFormat>
        <label>Business Risk Escalation Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Risk Escalation Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>